# pydantic2zod

./: .gitignore  LICENSE  README.md  docs.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: publish-to-pypi.yaml  publish-to-test-pypi.yaml  qa.yaml
examples/: compiler_scripting.py  eshop.py
pydantic2zod/: __init__.py  __main__.py  _codegen.py  _compiler.py  _model.py  _parser.py  model.py
tests/: test_compile.py  test_parse.py  test_parsers.py
tests/fixtures/: all_in_one.py  annotated_fields.py  builtin_types.py  class_vars.py  default_values_dict.py  default_values_list.py  external.py  generic_models.py  ignore_parsing.py  import_alias.py  type_alias.py  unique_names.py  user_defined_types.py  with_model_config.py
tests/snapshots/: snap_test_compile.py
